--- a/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
+++ b/src/Project/Wealth/platform/App_Config/Include/Project/Project.Wealth.Platform/Project.Wealth.Platform.config
@@ -117,6 +117,10 @@
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://10.14.88.77:9444</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://10.20.3.59:9444</patch:attribute>
       </setting>
+      <setting name="IMVPSafeIP">
+        <patch:attribute name="value" environment:require="Local or Development or Staging">10.14.88.77,127.0.0.1,192.168.6.103,10.26.203.9,10.26.203.10</patch:attribute>
+        <patch:attribute name="value" environment:require="Production">10.20.3.59,10.20.3.60</patch:attribute>
+      </setting>
       <setting name="OctonApiRoute">
         <patch:attribute name="value" environment:require="Local or Development or Staging">https://weamvp.firstbank-tt.com.tw:8443</patch:attribute>
         <patch:attribute name="value" environment:require="Production">https://weamvp.firstbank.com.tw:8443</patch:attribute>
